add methods to GenericApplicationContext:
- modifyBeanDefinitions(beanDefinitions);
- processBeansBeforeInitialization();
- initializeBeans(beansMap);
- processBeansAfterInitialization();